--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html>
     <head> 
         <title>My Webpage</title>
+        <link rel="stylesheet" href="style.css">
 	        <style>
 	        	table,td,th{
 	        		
 	        		border: 1px solid brown;
 	        		border-collapse:collapse;
 	        	}
+                div{
+                    background-color: cyan;
+                    size: 300px;
+                }
 
 	    	</style>
     </head>
@@ -42,6 +47,11 @@
                     byeee
                 </li>
         </ul>
-        
+        <div>
+        	width
+        </div>
+        <h1>
+            stylish
+        </h1>
     </body>
 </html>
